dietlibc (0.32-5.2exp1) xexperimental; urgency=low

  [ Thorsten Glaser ]
  * Make Hector the new Maintainer (keeping Gerrit as Uploader)
  * Add myself to Uploaders

 -- Thorsten Glaser <tg@mirbsd.de>  Tue, 08 Mar 2011 20:11:02 +0000

dietlibc (0.32-5.2) unstable; urgency=low

  * Non-maintainer upload.
  * Add ARM (armel and armhf) support. (Closes: #459482) 

 -- Hector Oron <zumbi@debian.org>  Fri, 25 Feb 2011 00:35:53 +0000

dietlibc (0.32-5.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix sparc64 detection, based on a patch by Ivan Jager (closes: #604717).
    Don't use defined(__sparc_v9__) to detect 64bit sparc, use
    defined(__sparcv9) || defined(__arch64__) instead.

 -- Julien Cristau <jcristau@debian.org>  Mon, 27 Dec 2010 13:09:27 +0100

dietlibc (0.32-5) unstable; urgency=medium

  * debian/diff/0013-mips-divdi3.c-fix-include-path-to-longlong.h.diff:
    remove; obsolete.
  * debian/diff/0013-sparc-use-mcpu-v9-instead-of-mcpu-supersparc.diff:
    new; sparc: use -mcpu=v9 instead of -mcpu=supersparc (fixes libowfat
    build failure on sparc).

 -- Gerrit Pape <pape@smarden.org>  Tue, 20 Apr 2010 19:38:47 +0000

dietlibc (0.32-4) unstable; urgency=low

  * debian/diff/0001-cvs-snapshot-20100209.diff: replace with
    debian/diff/0001-cvs-snapshot-20100320.diff: cvs snapshot 20100320
    (should fix build failure on mips[el]).

 -- Gerrit Pape <pape@smarden.org>  Sat, 20 Mar 2010 13:36:20 +0000

dietlibc (0.32-3) unstable; urgency=low

  * debian/rules: add MYARCH var to make clean to not rely on the output
    of uname -m (fixes build failure on mips).
  * debian/diff/0013-mips-divdi3.c-fix-include-path-to-longlong.h.diff:
    new; mips/divdi3.c: fix include path to "longlong.h" (fixed build
    failure on mipsel).
  * debian/rules, debian/control: no longer build the i386 dietlibc
    package (shared libraries) (see also #544060, closes: #569816).

 -- Gerrit Pape <pape@smarden.org>  Mon, 15 Feb 2010 22:25:03 +0000
